--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -5,6 +5,7 @@
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.render-pipelines.universal": "14.0.9",
+    "com.unity.services.cloudcode": "2.6.2",
     "com.unity.services.cloudsave": "3.2.0",
     "com.unity.services.leaderboards": "2.0.0",
     "com.unity.test-framework": "1.1.33",
